--- a/client-generator/fukutsu-cobol-client-generator.cabal
+++ b/client-generator/fukutsu-cobol-client-generator.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Lib
+      Types
   other-modules:
       Paths_fukutsu_cobol_client_generator
   hs-source-dirs:
@@ -33,6 +34,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , text ==1.2.5.0
   default-language: Haskell2010
 
 executable fukutsu-cobol-client-generator-exe
@@ -45,6 +47,7 @@ executable fukutsu-cobol-client-generator-exe
   build-depends:
       base >=4.7 && <5
     , fukutsu-cobol-client-generator
+    , text ==1.2.5.0
   default-language: Haskell2010
 
 test-suite fukutsu-cobol-client-generator-test
@@ -58,4 +61,5 @@ test-suite fukutsu-cobol-client-generator-test
   build-depends:
       base >=4.7 && <5
     , fukutsu-cobol-client-generator
+    , text ==1.2.5.0
   default-language: Haskell2010
