--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,16 @@
-name: test
+name: CI
 on:
   push:
   pull_request:
     types: [opened, reopened, review_requested, synchronize]
 
 jobs:
-  test-client-generator:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: freckle/stack-action@v3
-        with:
-          working-directory: client-generator
+    - uses: actions/checkout@v2
+    - name: Build
+      run: cargo build --verbose
+    - name: Test
+      run: cargo test --verbose
