--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 lalrpop-util = {version = "0.19.7", features = ["lexer"]}
 regex = "1"
+wasm-bindgen = "0.2.84"
 
 [build-dependencies]
 lalrpop = "0.19.7"
