Update the signature in order to adapt to WASM

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib", "rlib"]
 lalrpop-util = {version = "0.19.7", features = ["lexer"]}
 regex = "1"
 wasm-bindgen = "0.2.84"
+lazy_static = "1.4.0"
 
 [build-dependencies]
 lalrpop = "0.19.7"
