update: update ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Install wasm pack
+      run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+
     - name: Build
       run: cargo build --verbose
+
     - name: Test
       run: cargo test --verbose
+
+    - name: Run the sample program
+      run: make sample
