add: implement `get_data_tree`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ regex = "1"
 wasm-bindgen = "0.2.84"
 lazy_static = "1.4.0"
 nonempty = "0.8.1"
-slab_tree = "0.3.2"
+do-notation = "0.1.3"
 
 [build-dependencies]
 lalrpop = "0.19.7"
