--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,9 @@ jobs:
     - name: Build
       run: cargo build --verbose
 
+    - name: Run
+      run: cargo run
+
     - name: Test
       run: cargo test --verbose
 
