--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ wasm-bindgen = "0.2.84"
 lazy_static = "1.4.0"
 nonempty = "0.8.1"
 do-notation = "0.1.3"
+rustop = "1.1.2"
 
 [build-dependencies]
 lalrpop = "0.19.7"
