add: comipiler generates js for web browsers.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,9 @@ jobs:
     - name: Run test COBOL programs
       run: |
         make test
+    
+    - name: Build packages for webbrowser
+      run: |
+        cd test/www/
+        npm install
+        mv ../../fukutsu-cobol/ node_modules
