--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ lazy_static = "1.4.0"
 nonempty = "0.8.1"
 do-notation = "0.1.3"
 rustop = "1.1.2"
+tonic = "0.8.3"
 
 [build-dependencies]
 lalrpop = "0.19.7"
