--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
     - name: Install wasm pack
       run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 
+    - name: Install protoc
+      run: sudo apt install -y protobuf-compiler
+
     - name: Build
       run: |
         make install
