--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "fukutsu-cobol"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -19,9 +20,14 @@ rustop = "1.1.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tonic = "0.8.3"
+bytes = "1.2.1"
+prost = "0.11.0"
+prost-derive = "0.11.0"
+tokio = { version = "1.0", features = ["full"] }
 
 [build-dependencies]
 lalrpop = "0.19.7"
+tonic-build = "0.8.2"
 
 
 [[bin]]
