--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,16 +15,18 @@ wasm-bindgen = "0.2.84"
 nonempty = "0.8.1"
 do-notation = "0.1.3"
 rustop = "1.1.2"
+tower-http = { version = "0.4.0", features = ["full"] }
+tonic-web = "0.9.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-tonic = "0.8.3"
+tonic = "0.9.0"
 prost = "0.11.0"
 prost-derive = "0.11.0"
 tokio = { version = "1.0", features = ["full"] }
 
 [build-dependencies]
 lalrpop = "0.19.7"
-tonic-build = "0.8.2"
+tonic-build = "0.9.0"
 
 
 [[bin]]
