--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ tower-http = { version = "0.4.0", features = ["full"] }
 tonic = "0.9.0"
 prost = "0.11.0"
 prost-derive = "0.11.0"
+log = "0.4.17"
 tokio = { version = "1.0", features = ["full"] }
 
 [build-dependencies]
