--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ nonempty = "0.8.1"
 do-notation = "0.1.3"
 rustop = "1.1.2"
 tonic-web = "0.9.0"
+regex = "1.7.3"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tower-http = { version = "0.4.0", features = ["full"] }
